frontend rerender optimizations
